--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
-python_files = test[A-Z]*.py
-python_classes = Test[A-Z]*
-python_functions = test[A-Z]*
+python_files = test[_A-Z]*.py
+python_classes = *Tester *Tests
+python_functions = test[_A-Z]*
