Add build scripts

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,12 @@ SolverPro.code-workspace
 
 # scratch file/folder for manual testing
 scratch
+
+# pyinstaller build files
+build-scripts/*/*
+# ... but keep scripts
+!build-scripts/mac/maketar.sh
+!build-scripts/mac/run_pyinstaller.sh
+!build-scripts/mac/SolverPro_downloader_mac
+!build-scripts/mac/SolverPro_fixErrors
+!build-scripts/win/run_pyinstaller.bat
