--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ textual = "*"
 pyinstaller = "*"
 pytest = "*"
 pywin32-ctypes = "*"
+textual = {version = "*", extras = ["dev"]}
 
 [requires]
 python_version = "3.10"
